# simple_ws

./: CMakeLists.txt  README.md  base64.c  base64.h  sha1.h  simple_ws.pc.in  websocket.c  websocket.h  wshandshake.c  wshandshake.h  wsserver.c  wsserver.h
cmake/: simple_ws.pc.in  simple_wsConfig.cmake.in
examples/: echoserver.c  wsclient_terminal.c
include/simple_ws/: base64.h  sha1.h  simple_ws.h  websocket.h  wsclient.h  wshandshake.h  wsserver.h
src/: base64.c  sha1.c  websocket.c  wsclient.c  wshandshake.c  wsserver.c
